--- a/css/home.css
+++ b/css/home.css
@@ -21,7 +21,7 @@ div > a::after {
 div > a:hover::after, div > a.active-nav::after {
   width: 100%;
   background: #FFD68F;
-}
+} */
 
 .menu-text {
   text-decoration: none;
@@ -29,7 +29,7 @@ div > a:hover::after, div > a.active-nav::after {
   font-size: 1.5em;
   margin-bottom: 0em;
   margin-left: 100px;
-}
+} */
 
 .center {
   display: flex;
@@ -38,29 +38,18 @@ div > a:hover::after, div > a.active-nav::after {
   margin-top: 100px
 }
 
-.pink-underline {
-  text-decoration: underline;
-  text-decoration-color: #d9a593;
-  text-decoration-thickness: 5px;
-}
-
-.blue-underline {
-  text-decoration: underline;
-  text-decoration-color: #584CF4;
-  text-decoration-thickness: 5px;
-}
-
-.yellow-underline {
-  text-decoration: underline;
-  text-decoration-color: #FFD68F;
-  text-decoration-thickness: 5px;
-}
-
 .center-footer {
   padding-left: 50px;
   margin-top: 100px;
   text-align: center;
 }
+
+.center-contacts {
+  margin: auto;
+  width: 60%;
+  padding: 10px;
+  text-align: center;
+} */
 
 .mr-8 {
   margin-right: 8px;
@@ -88,14 +77,7 @@ div > a:hover::after, div > a.active-nav::after {
 
 .ml-18 {
   margin-left: 124px;
-}
-
-.center-contacts {
-  margin: auto;
-  width: 60%;
-  padding: 10px;
-  text-align: center;
-}
+} */
 
 .container{
   display:flex;
@@ -103,4 +85,32 @@ div > a:hover::after, div > a.active-nav::after {
   width: 100%;
   justify-content: center;
   align-items: center;
+}
+
+.send-button {
+  background-color: #FFD68F;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  color: black;
+  font-weight: bold;
+} */
+
+.mt-50 {
+  margin-top: 50px
+}
+
+.mt-600 {
+  margin-top: 600px
+}
+
+.mt-125 {
+  margin-top: 125px;
+}
+
+.p-0 {
+  padding: 0px;
 }
