--- a/css/elements.css
+++ b/css/elements.css
@@ -1,27 +1,33 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .send-button {
-    background-color: #FFD68F;
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
-    color: black;
-    font-weight: bold;
+  background-color: #ffd68f;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  color: black;
+  font-weight: bold;
 }
 
 .menu-text {
-    text-decoration: none;
-    color: black;
-    font-size: 1.5em;
-    margin-bottom: 0em;
-    margin-left: 100px;
+  text-decoration: none;
+  color: black;
+  font-size: 1.5em;
+  margin-bottom: 0em;
+  margin-left: 100px;
+}
+
+.input-rounded {
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 1px solid #1b1414;
 }
