[ADD] - Competencies page

--- a/css/underline.css
+++ b/css/underline.css
@@ -17,3 +17,8 @@
     text-decoration-thickness: 5px;
   }
   
+  .highlighted-description {
+    padding: 10px;
+    border-radius: 5px;
+    font-size: medium;
+}
