--- a/css/images.css
+++ b/css/images.css
@@ -4,3 +4,36 @@
     object-fit: contain;
     display: block;
 }
+
+.circle {
+    width: 180px;
+    height: 180px;
+    border: 2px dashed black;
+    border-radius: 50%;
+    display: block;
+    position: relative;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.circle::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 12px;
+    text-align: center;
+}
+
+.text-block {
+    border: 1px solid black;
+    padding: 10px;
+    margin-top: 15px;
+}
+
+.center-content {
+    display: flex;
+    flex-direction: column; /* stack children vertically */
+    align-items: center;    /* center children horizontally */
+}
